Delete functionality now working

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
 		<div class="add">
 			<form class="form-inline">
 				<input type="text" placeholder="Add a task" class="form-control">
-				<input type="submit" value="Add" class="btn btn-primary">
+				<input type="submit" value="Add" class="btn btn-primary delete">
 			</form>
 		</div>
 
