--- a/public/index.html
+++ b/public/index.html
@@ -25,11 +25,12 @@
 		</div>
 
 		<div class="index">
-			<table class="table">
+			<table class="table table-striped table-hover">
 				<thead>
 					<tr>
 						<th>Task</th>
 						<th>Actions</th>
+						<th>Status</th>
 					</tr>
 				</thead>
 				<tbody>
