--- a/public/index.html
+++ b/public/index.html
@@ -17,31 +17,45 @@
 			</div>
 		</nav>
 
-		<div class="add">
-			<form class="form-inline">
-				<input type="text" placeholder="Add a task" class="form-control">
-				<input type="submit" value="Add" class="btn btn-primary delete">
+		<div class="login">
+			<form>
+				<div class="form-group col-lg-6 col-md-offset-3">
+					<input class="form-control" type="text" placeholder="user@example.com">
+          <input class="form-control" type="password" placeholder="P@s$w0rD">
+          <input class="btn btn-warning" type="button" value="Register">
+          <input class="btn btn-primary" type="submit" value="Login">
+				</div>
 			</form>
 		</div>
 
-		<div class="index">
-			<table class="table table-striped table-hover">
-				<thead>
-					<tr>
-						<th>Task</th>
-						<th>Actions</th>
-						<th>Status</th>
-					</tr>
-				</thead>
-				<tbody>
-					<!-- Table rows with tasks will go here -->
-				</tbody>
-			</table>
+		<div class="app">
+			<div class="add">
+				<form class="new form-inline">
+					<input type="text" placeholder="Add a task" class="form-control">
+					<input type="submit" value="Add" class="btn btn-primary delete">
+				</form>
+			</div>
+
+			<div class="index">
+				<table class="table table-striped table-hover">
+					<thead>
+						<tr>
+							<th>Task</th>
+							<th>Actions</th>
+							<th>Status</th>
+						</tr>
+					</thead>
+					<tbody>
+						<!-- Table rows with tasks will go here -->
+					</tbody>
+				</table>
+			</div>
 		</div>
 
 	</div>
 
 	<script src="vendor/jquery/dist/jquery.min.js"></script>
+	<script src="vendor/firebase/firebase.js"></script>
 	<script src="script.js"></script>
 
 </body>
