--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 			</div>
 		</nav>
 
-		<div class="login">
+<!-- 		<div class="login">
 			<form>
 				<div class="form-group col-lg-6 col-md-offset-3">
 					<input class="form-control" type="text" placeholder="user@example.com">
@@ -26,7 +26,7 @@
           <input class="btn btn-primary" type="submit" value="Login">
 				</div>
 			</form>
-		</div>
+		</div> -->
 
 		<div class="app">
 			<div class="add">
