--- a/public/index.html
+++ b/public/index.html
@@ -17,16 +17,16 @@
 			</div>
 		</nav>
 
-<!-- 		<div class="login">
+		<div class="login">
 			<form>
-				<div class="form-group col-lg-6 col-md-offset-3">
+				<div class="form-group col-lg-4 col-md-offset-4">
 					<input class="form-control" type="text" placeholder="user@example.com">
           <input class="form-control" type="password" placeholder="P@s$w0rD">
           <input class="btn btn-warning" type="button" value="Register">
           <input class="btn btn-primary" type="submit" value="Login">
 				</div>
 			</form>
-		</div> -->
+		</div>
 
 		<div class="app">
 			<div class="add">
