Login/logout working in app and firebase

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,10 @@
 		<nav class="navbar navbar-default">
 			<div class="container">
 				<h1>Superproductify</h1>
+				<div class="log_status">
+				Logged in as <span class="logged_in_user"></span>
+				<button type="button" class="logout btn">Logout</button>
+				</div>
 			</div>
 		</nav>
 
