Added functionality to logout button and text

--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,8 @@
 			<div class="container">
 				<h1>Superproductify</h1>
 				<div class="log_status">
-				Logged in as <span class="logged_in_user"></span>
-				<button type="button" class="logout btn">Logout</button>
+					<span class="log_text">Not logged in</span>
+					<button type="button" class="logout btn" disabled="disabled">Logout</button>
 				</div>
 			</div>
 		</nav>
