Disabled registration functionality

--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,9 @@
 				<div class="form-group col-lg-4 col-md-offset-4">
 					<input class="form-control" type="text" placeholder="user@example.com">
           <input class="form-control" type="password" placeholder="P@s$w0rD">
-          <input class="btn btn-warning" type="button" value="Register">
+          <input class="btn btn-warning" type="button" value="Register" disabled="disabled">
           <input class="btn btn-primary" type="submit" value="Login">
+          <p class="form-control" disabled="disabled">Registration temporarily disabled</p>
 				</div>
 			</form>
 		</div>
